Fix mobile menu overflow

--- a/src/partial-styles/_header.scss
+++ b/src/partial-styles/_header.scss
@@ -97,6 +97,7 @@ header {
       top: 0;
       height: 100%;
       position: absolute;
+      padding: 0 0 100% 0;
       z-index: 10;
       left: 0;
       box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
