--- a/src/partial-styles/_modal.scss
+++ b/src/partial-styles/_modal.scss
@@ -10,5 +10,6 @@
     width: 100%;
     height: 100%;
     z-index: 5;
+    padding: 0 0 100% 0;
   }
 }
